# reinforcement-tuninig-llms

./: .gitignore  pyproject.toml  pyproject.toml.bak
src/: eval_sft_unsloth.py  ppo.py  rm.py  train_sft.py  train_sft_unsloth.py
src/wandb/: latest-run
src/wandb/offline-run-20260118_141219-93tlxn58/files/: requirements.txt
