[tool.poetry]
name = "rlhf-learning-tinyllama"
version = "0.1.0"
description = "RLHF training for TinyLlama"
authors = ["Yuvanesh Sankar"]
license = "MIT"  # Or your choice
readme = "README.md"
package-mode = false  # For script-only; set true + packages=[] if packaging later
packages = [{include = "rlhf_learning_tinyllama", from = "src"}]  # Matches your src/ layout

[tool.poetry.dependencies]
python = ">=3.10,<3.15"
transformers = ">=4.57.5,<5.0.0"
trl = "==0.9.6"
datasets = ">=4.5.0,<5.0.0"
peft = ">=0.18.1,<0.19.0"
bitsandbytes = ">=0.49.1,<0.50.0"
accelerate = ">=1.12.0,<2.0.0"
wandb = ">=0.24.0,<0.25.0"
torch = ">=2.9.1,<3.0.0"
torchvision = ">=0.24.1,<0.25.0"
py3nvml = ">=0.2.7,<0.3.0"
rich = "^14.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
